# startup/routes.js
@@ -1,4 +1,5 @@
 const express = require('express');
+const cashmovement = require('../routes/cashmovement');
 const cashtype = require('../routes/cashtype');
 const customers = require('../routes/customers');
 const entrytype = require('../routes/entrytype');
@@ -9,6 +10,7 @@ const error = require('../middleware/error');
 
 module.exports = function(app){
     app.use(express.json());
+    app.use('/api/cashmovement', cashmovement);
     app.use('/api/cashtype', cashtype);
     app.use('/api/customers', customers);
     app.use('/api/entrytype', entrytype);
